[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/GUI/PauseLayer/PauseLayer.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/GUI/Buttons/OptionsList.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/dynamic_fonts/menu_button_10.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.137255, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 0.921569, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 0.921569, 1 )

[node name="PauseLayer" type="CanvasLayer"]
pause_mode = 2
layer = 11
script = ExtResource( 1 )
Main_Menu = "res://TitleScreen/MainMenu.tscn"

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.137255, 0.137255, 0.737255 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 30
custom_constants/margin_left = 60
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_left = 60.0
margin_top = 30.0
margin_right = 260.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="OptionsContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel/MarginContainer"]
margin_left = 16.0
margin_top = 17.0
margin_right = 184.0
margin_bottom = 103.0
size_flags_vertical = 4

[node name="TeletransportContainer" type="HBoxContainer" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer"]
visible = false
margin_right = 168.0
margin_bottom = 9.0

[node name="Label" type="Label" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/TeletransportContainer"]
margin_right = 17.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "Ir a..."

[node name="PositionsList" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/TeletransportContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_right = 168.0
margin_bottom = 9.0
size_flags_horizontal = 3

[node name="TeletransportSeparator" type="HSeparator" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer"]
visible = false
margin_right = 168.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 2 )

[node name="Resume" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" groups=[
"FocusGroup",
"Pause",
] instance=ExtResource( 2 )]
margin_left = 68.0
margin_right = 99.0
margin_bottom = 11.0
text = "GUI_RESUME"

[node name="ShowControls" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" groups=[
"FocusGroup",
] instance=ExtResource( 2 )]
margin_left = 41.0
margin_top = 15.0
margin_right = 127.0
margin_bottom = 26.0
text = "GUI_SHOW_CONTROLS"

[node name="Restart" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" instance=ExtResource( 2 )]
margin_left = 68.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 41.0
text = "GUI_RESTART"

[node name="Options" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" instance=ExtResource( 2 )]
margin_left = 68.0
margin_top = 45.0
margin_right = 99.0
margin_bottom = 56.0
text = "GUI_OPTIONS"

[node name="MainMenu" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" instance=ExtResource( 2 )]
margin_left = 62.0
margin_top = 60.0
margin_right = 105.0
margin_bottom = 71.0
text = "GUI_MAIN_MENU"

[node name="Exit" parent="Control/MarginContainer/Panel/MarginContainer/OptionsContainer" instance=ExtResource( 2 )]
margin_left = 76.0
margin_top = 75.0
margin_right = 92.0
margin_bottom = 86.0
text = "GUI_EXIT"

[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/ShowControls" to="." method="_on_ShowControls_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/OptionsContainer/Exit" to="." method="_on_Exit_pressed"]
